--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Tauri + Vue + TS</title>
   </head>
 
-  <body class="bg-neutral-100 dark:bg-neutral-900 text-neutral-900 dark:text-neutral-100">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
